<package>
  <name>cffi_ros_utils</name>
  <version>0.1.2</version>
  <description>
    ROS utility functions to use CFFI interface
  </description>
  
  <author email="moesenle@cs.tum.edu">Lorenz Moesenlechner</author>

  <maintainer email="moesenle@cs.tum.edu">Lorenz Moesenlechner</maintainer>
  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
 
  <license>BSD</license>
  
  <url type="bugtracker">https://github.com/cram-code/cram_3rdparty/issues</url>
  <url type="repository">https://github.com/cram-code/cram_3rdparty</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>cffi</build_depend>
  <build_depend>split_sequence</build_depend>
  <build_depend>sbcl</build_depend>
  
  <run_depend>cffi</run_depend>
  <run_depend>split_sequence</run_depend>
  <run_depend>sbcl</run_depend>
</package>
