<package>
  <name>gsd</name>
  <version>0.1.3</version>
  <description>
      3rd party library: GSD
  </description>

  <author>Liam Healy</author>

  <maintainer email="moesenle@cs.tum.edu">Lorenz Moesenlechner</maintainer>
  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>GPL</license>

  <url type="website">http://repo.or.cz/w/gsd.git</url>
  <url type="bugtracker">https://github.com/cram-code/cram_core/issues</url>
  <url type="repository">https://github.com/cram-code/cram_core</url>
  <url type="repository">http://repo.or.cz/gsd.git</url>
  <!--external-version>e94b9ec23cb4f196c33987e8ed35838d0671b4f0</external-version-->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sbcl</build_depend>
  <build_depend>split_sequence</build_depend>

  <run_depend>sbcl</run_depend>
  <run_depend>split_sequence</run_depend>
</package>
