<package>
  <name>split_sequence</name>
  <version>0.1.3</version>
  <description>
    3rd party library: split-sequence
  </description>

  <author>James Bielman</author>

  <maintainer email="moesenle@cs.tum.edu">Lorenz Moesenlechner</maintainer>
  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>Public Domain</license>

  <url type="website">http://www.cliki.net/SPLIT-SEQUENCE</url>
  <url type="bugtracker">https://github.com/cram-code/cram_core/issues</url>
  <url type="repository">https://github.com/cram-code/cram_core</url>
  <url type="repository">https://github.com/sharplispers/split-sequence.git</url>
  <!--external-version>ccd34181d571c3d41f32855903f295f849209737</external-version-->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sbcl</build_depend>

  <run_depend>sbcl</run_depend>
</package>
